# auto_trax

./: .gitignore  README.md
auto_trax_arduino/: CMakeLists.txt  package.xml
auto_trax_arduino/sketchbook/read_digital/: read_digital.ino
auto_trax_controller/: CMakeLists.txt  package.xml
auto_trax_controller/include/: controller_processor.h
auto_trax_controller/include/auto_trax_controller/: controller_processor.h  pid.h
auto_trax_controller/include/auto_trax_controller/parameter/: parameter_bag.h  pid_bag.h
auto_trax_controller/include/parameter/: parameter_bag.h
auto_trax_controller/launch/: angular_rate_controller.launch  auto_trax_controller.launch  auto_trax_pid.launch  auto_trax_setpoint_plantstate.launch  motor_speed_controller.launch  setpoint_plantstate.launch  steering_angle_controller.launch
auto_trax_controller/parameter/: angular_rate_control_params.yaml  motor_speed_control_params.yaml  motor_speed_pid_params.yaml  parameter_bag.yaml  pid_bag.yaml  steering_angle_control_params.yaml  steering_angle_pid_params.yaml
auto_trax_controller/src/: auto_trax_controller_node.cpp  controller_node.cpp  controller_processor.cpp  pid.cpp  setpoint_plantstate_node.cpp
auto_trax_gazebo/: CMakeLists.txt  package.xml
auto_trax_gazebo/launch/: corridor.launch  corridor_navigation.launch  corridor_world.launch  laser_scan_test.launch
auto_trax_gazebo/models/april_tag/: model.config  model.sdf
auto_trax_gazebo/models/auto_trax_car/: model.config  model.sdf
auto_trax_gazebo/models/cart_front_steer_laser/: model.config  model.sdf
auto_trax_gazebo/models/cart_front_steer_two_lasers/: model.config  model.sdf
auto_trax_gazebo/src/: move_cart_plugin.cpp  occupancy_grid_plugin.cpp
auto_trax_gazebo/worlds/: corridor.world  corridor_with_car.world  laser_scan_walls.world
auto_trax_io/: CMakeLists.txt  io_params.yaml  package.xml
auto_trax_io/include/auto_trax_io/: auto_trax_io_node.h
auto_trax_io/launch/: driver_interface.launch  start_io.launch  start_io.launch~  steering_interface.launch
auto_trax_io/src/: JHPWMPCA9685.cpp  auto_trax_io_node.cpp  io_node.cpp
auto_trax_io/srv/: ApplyMotorSpeed.srv
auto_trax_localization/: CMakeLists.txt  main.cpp  package.xml
auto_trax_localization/config/: params.yaml
auto_trax_localization/data/map/: cab.rviz  cab.yaml
auto_trax_localization/include/: localization_node.hpp  math_utils.h  particle_filter.hpp  resampling.h  sampling_distribution.h  wheel_bot.hpp
auto_trax_localization/launch/: localization_devel.launch
auto_trax_localization/scripts/: publish_tf.py
auto_trax_localization/src/: localization_node.cpp  particle_filter.cpp  resampling.cpp  sampling_distribution.cpp  wheel_bot.cpp
auto_trax_msgs/: CMakeLists.txt  package.xml
auto_trax_msgs/msg/: MergedScan.msg
auto_trax_msgs/srv/: IOSetpoint.srv
auto_trax_path_planning/: CMakeLists.txt  package.xml
auto_trax_path_planning/include/auto_trax_path_planning/: drive_to_centroid.h  emergency_stop.h  occupancy_grid_processor.h  rrt_path_processor.h  rrt_unit_test.h
auto_trax_path_planning/include/auto_trax_path_planning/parameter/: occupancy_grid_parameters.h
auto_trax_path_planning/launch/: drive_to_center.launch  drive_to_center_test.launch  occupancy_grid_unit_test.launch  rrt_path_planner.launch  rrt_path_planner_test.launch  rrt_path_unit_test.launch
auto_trax_path_planning/parameter/: occupancy_grid_parameters.yaml
auto_trax_path_planning/src/: drive_to_centroid.cpp  emergency_stop_node.cpp  occupancy_grid_node.cpp  occupancy_grid_processor.cpp  rrt_path_node.cpp  rrt_path_processor.cpp  rrt_path_unit_test.cpp  rrt_unit_test_node.cpp
auto_trax_pid_test/: CMakeLists.txt  package.xml
auto_trax_pid_test/include/auto_trax_pid_test/: auto_trax_pid_test_processor.h
auto_trax_pid_test/launch/: auto_trax_pid_test.launch
auto_trax_pid_test/parameter/: parameter_bag.yaml
auto_trax_pid_test/src/: auto_trax_pid_test_node.cpp  auto_trax_pid_test_processor.cpp
auto_trax_sensors/: CMakeLists.txt  package.xml
auto_trax_sensors/config/: cascade.xml  primesense_calib.yaml
auto_trax_sensors/include/auto_trax_sensors/: april_tag_detection_node.h  dead_reckoning.h  dead_reckoning_node.h  image_processing.h  laser_scan_merger_node.h  laser_scan_processor.h  laser_scan_processor_node.h  line_tracking.h  line_tracking_node.h  occ_grid_manager.h  sign_detection_node.h  wall_detection_node.h
auto_trax_sensors/launch/: april_tag_detection.launch  dead_reckoning.launch  laser_scan_merger.launch  laser_scan_merger_test.launch  line_tracking.launch  openni2_1.launch  openni2_2.launch  sign_detection.launch
auto_trax_sensors/src/: april_tag_detection_node.cpp  dead_reckoning.cpp  dead_reckoning_node.cpp  laser_scan_merger_node.cpp  laser_scan_processor_node.cpp  line_tracking.cpp  line_tracking_node.cpp  sign_detection_node.cpp  wall_detection_node.cpp
auto_trax_tests/: CMakeLists.txt  package.xml
auto_trax_tests/data/: dual_laser_scans_2016-06-18-14-21-43.bag
auto_trax_tests/include/auto_trax_tests/: wall_following_test_processor.h
auto_trax_tests/launch/: laser_scan_merger_test.launch  rrt_path_planner_test.launch  wall_following_test.launch
auto_trax_tests/parameter/: wall_following_bag.yaml
auto_trax_tests/src/: wall_following_test_node.cpp  wall_following_test_processor.cpp
auto_trax_tests/wall_following_test/launch/: wall_following_test.launch
auto_trax_tests/wall_following_test/parameter/: parameter_bag.yaml
auto_trax_tests/wall_following_test/src/: wall_following_test_node.cpp  wall_following_test_processor.cpp
rqt_auto_trax/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_auto_trax/resource/: motors_control_widget.ui
rqt_auto_trax/scripts/: rqt_auto_trax
rqt_auto_trax/src/rqt_auto_trax/: auto_trax.py  motors_control_widget.py
sensor_processing/: CMakeLists.txt  package.xml
sensor_processing/include/sensor_processing/: imu_integration.h
sensor_processing/launch/: dead_reckoning.launch  sensor_processing.launch
sensor_processing/src/: dead_reckoning.cpp  imu_integration.cpp
(+9 files in other folders)
