<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_arduino</name>
  <version>0.0.1</version>
  <description>
    The auto_trax_arduino package.
  </description>

  <maintainer email="pvechersky@gmail.com">Pavel Vechersky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
