<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_controller</name>
  <version>0.0.1</version>
  <description>
    The auto_trax_controller package.
  </description>

  <maintainer email="marius.grimm93@web.de">Marius Grimm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>auto_trax_io</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
