<?xml version="1.0"?>
<package>
  <name>auto_trax_gazebo</name>
  <version>0.0.1</version>
  <description>Package for testing algorithms in the Gazebo simulator</description>

  <maintainer email="pavelv@student.ethz.ch">Pavel Vechersky</maintainer>

  <author>Pavel Vechersky</author>

  <license>TODO</license>

  <url type="website">https://github.com/pvechersky/auto_trax</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
