<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_gazebo</name>
  <version>0.0.1</version>
  <description>
    Package for testing algorithms in the Gazebo simulator.
  </description>

  <maintainer email="pavelv@student.ethz.ch">Pavel Vechersky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>