<?xml version="1.0"?>
<package>
<name>auto_trax_io</name>
<version>0.0.0</version>
<description>The auto_trax_io package</description>

  <maintainer email="marcozorzi@icloud.com">Marco Zorzi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs  </build_depend>
  <build_depend>ackermann_msgs  </build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
