<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_io</name>
  <version>0.0.1</version>
  <description>
    The auto_trax_io package.
  </description>

  <maintainer email="marcozorzi@icloud.com">Marco Zorzi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>auto_trax_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
