<?xml version="1.0"?>
<package format="2">
    <name>auto_trax_localization</name>
    <version>0.0.1</version>
    <description>
        The auto_trax_localization package.
    </description>

    <maintainer email="fulkast@gmail.com">Frank Tarimo Lanke Fu</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>


    <depend>roscpp</depend>
    <depend>barc</depend>
    <depend>std_msgs</depend>
    <depend>auto_trax_msgs</depend>
    <depend> tf </depend>
    <depend> geometry_msgs</depend>
</package>
