<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_path_planning</name>
  <version>0.0.1</version>
  <description>
    The auto_trax_path_planning package.
  </description>

  <maintainer email="fulkast@gmail.com">Frank Tarimo Lanke Fu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>