<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_sensors</name>
  <version>0.0.1</version>
  <description>
    Package for processing sensor data
  </description>

  <maintainer email="pavelv@student.ethz.ch">Pavel Vechersky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>auto_trax_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>

