<?xml version="1.0"?>
<package format="2">
  <name>auto_trax_tests</name>
  <version>0.0.1</version>
  <description>
    The auto_trax_tests package.
  </description>

  <maintainer email="marius.grimm93@web.de">Marius Grimm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>