<?xml version="1.0"?>
<package format="2">
  <name>rqt_auto_trax</name>
  <version>0.0.1</version>
  <description>
    The rqt_auto_trax package.
  </description>

  <maintainer email="pvechersky@gmail.com">Pavel Vechersky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>auto_trax_io</depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
